feat: academy intern and document module updates